--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
         </section>
         <!-- About us section -->
         <section class="info">
-            <h2 hidden>About us</h2>
-            <ul class="info-list">
+            <h2 class="hidden" hidden>About us</h2>
+            <ul class="list">
                 <li class="info-item">
                     <h3 class="info-title">Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="info-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li class="info-item">
                     <h3 class="info-title">Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="info-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li class="info-item">
                     <h3 class="info-title">Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="info-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li class="info-item">
                     <h3 class="info-title">Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="info-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -66,7 +66,7 @@
         <!-- Works section -->
         <section class="works">
             <h2 class="works-title">What are we doing</h2>
-            <ul class="works-list">
+            <ul class="list">
                 <li class="works-img">
                     <img src="./images/photo1.jpg" alt="computer screen" width="360">
                 </li>
@@ -81,26 +81,26 @@
         <!-- Team section -->
         <section class="team">
             <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
-                <li>
+            <ul class="list">
+                <li class="team-item">
                     <img src="./images/mark.jpg" alt="Mark Gurrero" width="264">
                     <h3 class="team-list-title">Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="team-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/tom.jpg" alt="Tom Ford" width="264">
                     <h3 class="team-list-title">Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
                     <h3 class="team-list-title">Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="team-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
                     <h3 class="team-list-title">Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
