--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!-- header -->
 <header>
     <nav class="header-nav">
-        <a class="header-logo link" href="./index.html">Web<span class="logo-part">Studio</span></a>
+        <a class="header-logo link" href="./index.html">Web<span class="header-logo-part">Studio</span></a>
         <ul class="list">
             <li class="nav-item"><a class="nav-item link" href="./index.html">Studio</a></li>
             <li class="nav-item"><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
@@ -92,7 +92,7 @@
 </main>
 <!-- Footer section -->
 <footer class="footnote">
-    <a class="footer-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+    <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
     <p class="footnote-text">Increase the flow of customers and sales for your business with digital marketing &
         growth solutions.</p>
 </footer>
