--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </main>
     <!-- Footer section -->
     <footer class="footnote">
-        <a class="footer-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
         <p class="footnote-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
