--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- header -->
 <header>
     <nav class="header-nav">
-        <a class="header-logo link" href="./index.html">Web<span class="logo-part">Studio</span></a>
+        <a class="header-logo link" href="./index.html">Web<span class="header-logo-part">Studio</span></a>
         
         <ul class="list">
             <li class=""><a class="nav-item link" href="./index.html">Studio</a></li>
@@ -39,7 +39,7 @@
         </section>
         <!-- About us section -->
         <section class="info">
-            <h2 class="hideen-title" hidden>About us</h2>
+            <h2 class="hidden-title" hidden>About us</h2>
             <ul class="list">
                 <li class="info-item">
                     <h3 class="info-title">Strategy</h3>
